syntax = "proto3";

package calculator;

option go_package = "github.com/flvritski/gRPC/calculator/proto";

import "sum.proto";
import "prime.proto";
import "avg.proto";
import "max.proto";

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse);
    rpc PrimeManyTimes (PrimeRequest) returns (stream PrimeResponse);
    rpc Avg (stream AvgRequest) returns (AvgResponse);
    rpc Max (stream MaxRequest) returns (stream MaxResponse);
}
