syntax = "proto3";

package calculator;

option go_package = "github.com/flvritski/gRPC/calculator/proto";

message PrimeRequest {
    int32 prime_number = 1;
}

message PrimeResponse {
    int32 prime_result = 1;
}

service PrimeService {
    rpc Prime(PrimeRequest) returns (PrimeResponse);
}